--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,7 @@ yarn-debug.log*
 .yarn-integrity
 
 /app/helpers/static_pages_helper.rb
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
