--- a/.rubocop_disabled.yml
+++ b/.rubocop_disabled.yml
@@ -73,3 +73,7 @@ Lint/AssignmentInCondition:
 Rails/HelperInstanceVariable:
   Description: 'Do not use instance variables in helpers'
   Enabled: false
+
+Rails/ReflectionClassName:
+  Description: "Use a string value for class_name."
+  Enabled: false
